fix(footer): fix issue where height of mobile footer was restricted (#82)
Navigation is unreadable and unclickable because of the fixed height of the footer.

--- a/src/css/imports/footer.scss
+++ b/src/css/imports/footer.scss
@@ -38,7 +38,9 @@
 
     &--stripe {
       align-items: center;
-      height: 60px;
+      @include min-width {
+        height: 60px;
+      }
     }
   }
 
